--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/socket.io-client": "^1.4.32",
     "core-js": "^3.3.2",
     "register-service-worker": "^1.6.2",
     "socket.io": "^2.3.0",
