--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "material-design-icons-iconfont": "^5.0.1",
     "register-service-worker": "^1.6.2",
+    "rxjs": "^6.5.4",
     "socket.io": "^2.3.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
