--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
+    "vue-pull-to": "^0.1.8",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
